Complex Solidify Crash with Ngons #80897

Closed
opened 2020-09-17 17:12:34 +02:00 by Henrik D. · 5 comments
Member

System Information
Operating system: Linux-5.8.0-1-amd64-x86_64-with-debian-bullseye-sid 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 450.66

Blender Version
Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-09-15 14:40, hash: 11906cd543
Worked: never

Short description of error
If ngons are merged across the ngon by the merge algorithm of complex solidify it fill cause an error and a crash due to a segmentation fault.

Exact steps for others to reproduce the error
Load the attached file and play the animation until the end.
Every single example object in there should crash blender on it's own.
SolidifyNgonCrash.blend

**System Information** Operating system: Linux-5.8.0-1-amd64-x86_64-with-debian-bullseye-sid 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 450.66 **Blender Version** Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-09-15 14:40, hash: `11906cd543` Worked: never **Short description of error** If ngons are merged across the ngon by the merge algorithm of complex solidify it fill cause an error and a crash due to a segmentation fault. **Exact steps for others to reproduce the error** Load the attached file and play the animation until the end. Every single example object in there should crash blender on it's own. [SolidifyNgonCrash.blend](https://archive.blender.org/developer/F8892537/SolidifyNgonCrash.blend)
Author
Member

Added subscriber: @HDMaster84

Added subscriber: @HDMaster84
Henrik D. self-assigned this 2020-09-17 18:05:27 +02:00
Author
Member

This bug exposes a major problem in the merge algorithm which when naivly fixed will raise it's computational complexity significantly. I am not yet sure how to correctly fix this. I will post a patch, but it is slow...

This bug exposes a major problem in the merge algorithm which when naivly fixed will raise it's computational complexity significantly. I am not yet sure how to correctly fix this. I will post a patch, but it is slow...

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by 72e741ee62

This issue was referenced by 72e741ee62b54cbda9a7ad735cc2c6e4957c3af0

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#80897
No description provided.